css/main.css
/* Remove margin and padding from everything */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Default */
html {
    font-weight: 400;
    font-size: 10px;
    line-height: 1.7;
    overflow-x: hidden;
}

body {
    background-color: #fff;  
}

.btn-purple {
    display: inline-block;
    text-transform: uppercase;
    text-decoration: none;
    font-size: .9rem;
    color: #fff;
    border-radius: .7rem;
    padding: .5rem;
    background: #736EDF;
}

/* HEADER */
.header{
    background: 
    linear-gradient(
    150deg,
    #742ED1 20%,
    #7448D7 20%,
    #7448D7 50%,
    #736EDF 50.1%,
    #736EDF 75%,
    white 75.1%
  );;
    position: relative;
    background-position: top;
    height: 96vh;
    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
}

.text-box {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.heading-primary {
    color: #fff;
    backface-visibility: hidden;
    margin-bottom: 2rem;
    font-size: 2.1rem; 
}

.heading-primary-main {
    display: block;
}

.heading-primary-sub {
    display: block;
}

#or-less {
    color: #9BE8B2;
}

.search-text {
    display: block;
    position: relative;
    transform: translateX(-17%);

}

#input-text {
    height: 3rem;
    width: 130%;
    border-radius: 5px;
    border: none;
}

#input-submit {
    position: relative;
    top: .6rem;
    left: 2.5rem;
    text-decoration: none;
    color: #fff;
    background-color:#81D398;
    padding: 1rem;
    display: inline-block;
    border-radius: 5px;
}

#input-text::placeholder {
    padding-left: 1.3rem;
}


/* SECTION 1 */
.section-1 {
    position: absolute;
    top: 59%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.section-1-learn-div {
    position: relative;
    top: 6vh;
}
#section-1-learn-text {
    text-transform: uppercase;
    font-size: 1.1rem;
    color: rgba(255, 255, 255, 0.822); 
    white-space: nowrap;
}

.section-1-arrow-div {
    position: absolute;
    top: 9.5vh;
}

#section-1-arrow {
    background-color:#81D398;
    padding: 1rem;
    border-radius: 50%;
}

#section-1-arrow-img{ 
    position: relative;
    top: .7rem;
    width: 8%;
}



/* SECTION 2 */
.section-2 {
    margin: 3rem 2rem;
    text-align: center;
    font-size: 1.3rem;
}


.section-2-text p {
    opacity: 0.5;
}

.section-2-btn {
    margin-top: 1.5rem;
}

/* MEDIA QUERIES */

@media (min-width: 600px) {

    html {
        font-size: 16px;
        margin: 2em; 
    }

    

    .section-2 p{
        margin-left: 25%;
        width: 50vw;
    }


}

